# XSOC_veadk

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTES.md  README.md  __init__.py  agent.py  main.py  problems.md  pyproject.toml  rule.md  test_summary_report.md  todo.md  veadk.yaml  xsoc_blueprint.mermaid
.claude/: settings.local.json
agents/: __init__.py  investigation_agent.py  response_agent.py  tracing_agent.py  visualization_agent.py
docs&data_demo/: example_alert.json
docs&data_demo/api_docs/: 接口分类清单.md
docs&data_demo/api_docs/CAASM/: api_v1_asset_list_get.json
docs&data_demo/api_docs/DingtalkAITable/: 钉钉mcp说明文档.txt
docs&data_demo/api_docs/ITSM/: create_event_normal(demo).py
docs&data_demo/api_docs/NDR/: API测试脚本.py
docs&data_demo/api_docs/ThreatbookMCP/: 微步MCP说明文档.md
flows/: __init__.py  flow_plan.md  security_event_flow.py
schemas/: __init__.py  security_event.py
tests/: api_connectivity_test.py  conftest.py
tests/integration/: test_security_event_flow.py  test_tool_chain.py
tests/unit/agents/: test_investigation_agent.py  test_response_agent.py  test_tracing_agent.py  test_visualization_agent.py
tests/unit/core/: test_config.py  test_event_bus.py
tests/unit/tools/: test_alert_risk_query.py  test_asset_query.py  test_data_archive_tool.py  test_event_query.py  test_response_tool.py  test_threat_intel.py
tests/unit/utils/: test_exceptions.py  test_helpers.py  test_logger.py
tools/: __init__.py  alert_risk_query_tool.py  asset_query_tool.py  data_archive_tool.py  event_query_tool.py  response_tool.py  threat_intel_tool.py
(+116 files in other folders)
